--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <script>
+  // 🔒 Verifica se o acesso foi liberado na sessão
+  const acesso = sessionStorage.getItem("acessoCiente");
+  if (acesso !== "ok") {
+    window.location.href = "login.html";
+  }
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Avaliações - Ciente IE</title>
@@ -47,3 +54,4 @@
   </div>
 </body>
 </html>
+
