Add new Functional Assessment card to index.html

--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
       <a href="bigfivetestintegrado.html" class="btn">Abrir</a>
     </div>
 
+    <div class="card">
+      <h2 class="text-xl font-semibold">🧩 Avaliação Funcional</h2>
+      <p class="text-blue-100">Assimetrias Musculares, Mobilidade e Flexibilidade</p>
+      <a href="diagnostico_funcional" class="btn">Abrir</a>
+    </div>
+
     <footer>Powered by <b>Ciente Inteligência Esportiva</b></footer>
   </div>
 </body>
 </html>
+
 
